# hgtlib

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindArgTable.cmake  FindCheck.cmake  FindGSL.cmake  FindGperftools.cmake
argtable3/: CMakeLists.txt
asprintf/: CMakeLists.txt
bstrlib/: CMakeLists.txt  bstrlib.c
src/: CMakeLists.txt  hgt_corr.c  hgt_corr.h  hgt_cov.c  hgt_cov.h  hgt_file.c  hgt_file.h  hgt_genome.c  hgt_genome.h  hgt_linkage.c  hgt_linkage.h  hgt_params.c  hgt_params.h  hgt_pop.c  hgt_pop.h  hgt_pop_bsc.c  hgt_pop_bsc.h  hgt_pop_define.h  hgt_pop_internal.h  hgt_predict.c  hgt_predict.h  hgt_stat.c  hgt_stat.h  hgt_utils.c  hgt_utils.h
targets/: CMakeLists.txt  hgt_forward_coal_back.c  hgt_forward_coal_back.h  hgt_mpi_moran.c  hgt_mpi_moran_const.c  hgt_mpi_moran_expon.c  hgt_mpi_moran_step.c  hgt_mpi_no_calc.c  hgt_mpi_simu.c  hgt_mpi_simu.h  hgt_mpi_simu2.c  hgt_simu.c
targets/examples/: run_hgt_simu_example1.cfg  run_mpi_example1.cfg  run_mpi_example2.cfg  run_mpi_example3.cfg
tests/: CMakeLists.txt  test_hgt_corr.c  test_hgt_cov.c  test_hgt_pop.c  test_hgt_stat.c
