cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules")
project(hgt)
enable_testing()
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(targets)
add_subdirectory(bstrlib)
if(APPLE)
  set(CMAKE_INSTALL_PREFIX /Users/mingzhi/workspace/hgtlib)
  else(APPLE)
  	set(CMAKE_INSTALL_PREFIX /scratch/work/elk2/mingzhi/usr/local/hgtlib)
endif(APPLE)
MESSAGE(STATUS "set install prefix to ${CMAKE_INSTALL_PREFIX}")